Fixes mobile menu visibility

--- a/docroot/sites/all/themes/ilr_theme/scss/components/_nav.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_nav.scss
@@ -106,7 +106,10 @@
 }
 
 .menu-block-ilr-subnav ul.menu {
-  visibility: hidden; // fix this when switching between desktop and mobile
+  visibility: hidden;
+  [data-menu-position="open"] & {
+    visibility: visible;
+  }
   position: relative;
   top: 0;
   margin: 0;
